# contentPlatformSDK

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  pyproject.toml
castlabs/: __init__.py  api.py  client.py  errors.py  repository.py  urls.py  workflow.py
doc/: content-repository.md  content-workflow.md
tests/: conftest.py  test_api.py  test_exceptions.py
